--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build:email": "tailwindcss -c tailwind.config.ts -i ./src/styles/globals.css -o dist/output.css --minify",
+    "build:email": "tailwindcss -c tailwind.config.ts -i ./src/styles/email.css -o dist/email.css --minify",
     "build": "npm run build:email && next build",
     "start": "next start",
     "lint": "next lint"
